--- a/button.html
+++ b/button.html
@@ -9,14 +9,14 @@
     <script>
       // MQTT client details:
       let broker = {
-        hostname: "public.cloud.shiftr.io",
-        port: 443,
+        hostname: 'broker.mqttgo.io', //'public.cloud.shiftr.io',
+        port: 8084 //443
       };
       // MQTT client:
       let client;
       // client credentials:
       let creds = {
-        clientID: "JUSTp5Client", // choose whatever name you want
+        clientID: "JUSTp5Client2", // choose whatever name you want
         userName: "public", // unique Key from token
         password: "public", // unique Secret from token
       };
